--- a/websrc/stylesheets/common/_colors.scss
+++ b/websrc/stylesheets/common/_colors.scss
@@ -1,4 +1,8 @@
 // Colors
 $color-active: #e91e63;
+$color-focus: #3da6ff;
+$color-hover: #FAF9FA;
+$color-text-default: #858598;
+$color-text-hover: #000;
 
 $resource-version: 1
