--- a/websrc/template/elements/buttons.scss
+++ b/websrc/template/elements/buttons.scss
@@ -20,6 +20,7 @@
     border-style: solid;
     border-color: transparent;
     background-image: none;
+    border-radius: 2px !important;
 }
 
 .btn:hover {
