--- a/app/templates/SPA.@layout.latte
+++ b/app/templates/SPA.@layout.latte
@@ -406,12 +406,15 @@
 						{include 'SPA/snippets/header-nav-left.latte'}
 						{include 'SPA/snippets/header-nav-right.latte'}
 					</div>
-					<div class="row">
+					<div id="page-panels-tabs-wrapper" class="row">
 						<div class="col-lg-12">
 							{include ./SPA/kendo-templates/panels-list.latte}
 						</div>
 					</div>
 					<div id="app-content">
+						<div class="content-box">
+
+						</div>
 					</div>
 				</div>
 			</div>
