--- a/vendor-dev/legerete/spa-kendo-acl/nette-src/Components/templates/spa-acl.latte
+++ b/vendor-dev/legerete/spa-kendo-acl/nette-src/Components/templates/spa-acl.latte
@@ -5,38 +5,36 @@
 		data-source-destroy="{plink LeSpaAcl:Acl:Acl:}?do=destroy"
 		data-resources="{$allResourcesJson}"
 >
-	<div class="content-box">
-		<h3 class="content-box-header">{_acl.h1}
-		</h3>
-		<div id="acl-roles-grid" data-role="grid"
-			data-toolbar="[{
-						name: 'create',
-						text: '{_acl.role.create}',
-						template: '<div class=\'btn btn-success btn-xs k-grid-add\'><span class=\'glyph-icon icon-plus\'></span> {_acl.role.create}</div>'
-					}]"
-			data-columns="[
-				{
-					field: 'update',
-					width: 70,
-					title: '{_acl.role.save}',
-					template: '<div data-bind=\'visible: edited\' data-role=\'update\' class=\'btn btn-success btn-xs k-grid-save-changes\'><span class=\'glyph-icon icon-save\'>  {_acl.role.save}</div>',
-				},
-				{
-					field: 'title',
-					title: '{_acl.role.title}',
-					template: '#=title#',
-					attributes: {
-						'class': 'table-cell title'
-					}
-				},
-				{ field: 'parents', editor: SPA.panelTypes['acl'].parentRolesEditor, title: '{_acl.role.parentRoles}', template: '#=SPA.panelTypes[\'acl\'].generateRolesTemplate(parents)#'}
-			]"
-			data-editable="true"
-			data-bind="source: roles, events: { dataBound: gridDataBound, detailInit: detailInit, detailExpand: detailExpand, change: gridDataChanged, save: saveGridChanges, saveChanges: saveChanges}"
-			data-detail-template="spa-view-acl-role-detail"
-		>
+	<h3 class="content-box-header">{_acl.h1}
+	</h3>
+	<div id="acl-roles-grid" data-role="grid"
+		data-toolbar="[{
+					name: 'create',
+					text: '{_acl.role.create}',
+					template: '<div class=\'btn btn-success btn-xs k-grid-add\'><span class=\'glyph-icon icon-plus\'></span> {_acl.role.create}</div>'
+				}]"
+		data-columns="[
+			{
+				field: 'update',
+				width: 70,
+				title: '{_acl.role.save}',
+				template: '<div data-bind=\'visible: edited\' data-role=\'update\' class=\'btn btn-success btn-xs k-grid-save-changes\'><span class=\'glyph-icon icon-save\'>  {_acl.role.save}</div>',
+			},
+			{
+				field: 'title',
+				title: '{_acl.role.title}',
+				template: '#=title#',
+				attributes: {
+					'class': 'table-cell title'
+				}
+			},
+			{ field: 'parents', editor: SPA.panelTypes['acl'].parentRolesEditor, title: '{_acl.role.parentRoles}', template: '#=SPA.panelTypes[\'acl\'].generateRolesTemplate(parents)#'}
+		]"
+		data-editable="true"
+		data-bind="source: roles, events: { dataBound: gridDataBound, detailInit: detailInit, detailExpand: detailExpand, change: gridDataChanged, save: saveGridChanges, saveChanges: saveChanges}"
+		data-detail-template="spa-view-acl-role-detail"
+	>
 
-		</div>
 	</div>
 </script>
 
@@ -56,14 +54,11 @@
 		<tr>
 			<td><strong>{_$resource}</strong></td>
 			{foreach $allPrivileges as $privilege}
-				{if isset($resources[$resource][$privilege])}
-					<td>
-						<input class="custom-checkbox" data-resource="{$resource|replace:':',''}" data-privilege="{$privilege}" type="checkbox" name="{$resource|replace:':',''}.{$privilege}" value="1" data-bind="checked: resources.{$resource|replace:':',''}.{$privilege}, events: { change: onChangeResource}">
-					</td>
-				{else}
-					<td>
-					</td>
-				{/if}
+				<td>
+					{if isset($resources[$resource][$privilege])}
+						<input id="{$privilege}-{$resource|replace:':',''}" data-resource="{$resource|replace:':',''}" data-privilege="{$privilege}" type="checkbox" name="{$resource|replace:':',''}.{$privilege}" value="1" data-bind="checked: resources.{$resource|replace:':',''}.{$privilege}, events: { change: onChangeResource}">
+					{/if}
+				</td>
 			{/foreach}
 		</tr>
 		{/foreach}
