--- a/websrc/stylesheets/common/_colors.scss
+++ b/websrc/stylesheets/common/_colors.scss
@@ -2,7 +2,14 @@
 $color-active: #e91e63;
 $color-focus: #3da6ff;
 $color-hover: #FAF9FA;
+$color-border: #CCCCCC;
+$color-divider: rgba(158, 173, 195, 0.16);
 $color-text-default: #858598;
 $color-text-hover: #000;
+$color-success: #4CAF50;
+$color-success-darken: darken($color-success, 10%);
+$color-bg-primary: #FFFFFF;
+$color-overlay-default: #272634;
+$color-widgets-bg-secondary: #f5f5f5;
 
 $resource-version: 1
