--- a/websrc/template/icons/iconic/iconic.scss
+++ b/websrc/template/icons/iconic/iconic.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'iconic';
-  src: url('iconic.eot?99378382');
-  src: url('iconic.eot?99378382#iefix') format('embedded-opentype'),
-       url('iconic.woff?99378382') format('woff'),
-       url('iconic.ttf?99378382') format('truetype'),
-       url('iconic.svg?99378382#iconic') format('svg');
+  src: url('/assets/fonts/iconic.eot?99378382');
+  src: url('/assets/fonts/iconic.eot?99378382#iefix') format('embedded-opentype'),
+       url('/assets/fonts/iconic.woff?99378382') format('woff'),
+       url('/assets/fonts/iconic.ttf?99378382') format('truetype'),
+       url('/assets/fonts/iconic.svg?99378382#iconic') format('svg');
   font-weight: normal;
   font-style: normal;
 }
